VPC/VPC2/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.0"
    }
  }
}

# Configure the AWS Provider
provider "aws" {
    region = "us-east-1"
    access_key = "AKIAQ4XUSHIJSA6FZIMC"
    secret_key = "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"
}

#Create a VPC
resource "aws_vpc" "Test01"{
    cidr_block = "10.0.0.0/16"
    tags = {
        Name = "Test01"
        Env ="Dev"
    }
}

#Create a public subnet
resource "aws_subnet" "PublicSubnet"{
    vpc_id = aws_vpc.Test01.id
    availability_zone = "us-east-1a"
    cidr_block = "10.0.1.0/24"
}

#create a private subnet
resource "aws_subnet" "PrivSubnet"{
    vpc_id = aws_vpc.Test01.id
    cidr_block = "10.0.2.0/24"
    map_public_ip_on_launch = true
}

#create IGW
resource "aws_internet_gateway" "myIgw"{
    vpc_id = aws_vpc.Test01.id
}

#route Tables for public subnet
resource "aws_route_table" "PublicRT"{
    vpc_id = aws_vpc.Test01.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.myIgw.id
    }
}
 

#route table association public subnet 
resource "aws_route_table_association" "PublicRTAssociation"{
    subnet_id = aws_subnet.PublicSubnet.id
    route_table_id = aws_route_table.PublicRT.id
}
